crates/nash-parse/src/snapshots/nash_parse__string__tests__string_error_bad_unicode_format.snap
---
source: crates/nash-parse/src/string.rs
description: "Code:\n\n\"\\u41\""
---
String(
    Escape(
        BadUnicodeFormat(
            2,
        ),
    ),
    1,
    3,
)
