crates/nash-parse/src/snapshots/nash_parse__string__tests__string_error_bad_unicode_no_close.snap
---
source: crates/nash-parse/src/string.rs
description: "Code:\n\n\"\\u{41\""
---
String(
    Escape(
        BadUnicodeFormat(
            4,
        ),
    ),
    1,
    3,
)
