crates/nash-parse/src/snapshots/nash_parse__string__tests__string_error_endless_multi.snap
---
source: crates/nash-parse/src/string.rs
description: "Code:\n\n\"\"\"hello"
---
String(
    EndlessMulti,
    1,
    4,
)
