crates/nash-parse/src/snapshots/nash_parse__string__tests__string_error_endless_single.snap
---
source: crates/nash-parse/src/string.rs
description: "Code:\n\n\"hello"
---
String(
    EndlessSingle,
    1,
    2,
)
