crates/nash-parse/src/snapshots/nash_parse__string__tests__string_error_not_a_string.snap
---
source: crates/nash-parse/src/string.rs
description: "Code:\n\nabc"
---
Expected(
    1,
    1,
)
