crates/nash-parse/src/snapshots/nash_parse__string__tests__string_error_unknown_escape.snap
---
source: crates/nash-parse/src/string.rs
description: "Code:\n\n\"\\x\""
---
String(
    Escape(
        Unknown,
    ),
    1,
    3,
)
