crates/nash-parse/src/snapshots/nash_parse__string__tests__string_escape_newline.snap
---
source: crates/nash-parse/src/string.rs
description: "Code:\n\n\"hello\\nworld\""
---
"hello\nworld"
