crates/nash-parse/src/snapshots/nash_parse__string__tests__string_multi_with_newline.snap
---
source: crates/nash-parse/src/string.rs
description: "Code:\n\n\"\"\"hello\nworld\"\"\""
---
"hello\nworld"
